Review fixes: the spec shown, the floor counted, the JDK stated
Four findings from review. The two about the JDK were checked against the
artefacts rather than the docs, and they were right.

The quickstart spec ended after the email leaf, while the response two
sections later reports both email and firstName. The anchor now closes
below both, so the spec a reader sees accounts for the errors they read.

The include floor counted only anchored includes, so deleting the golden
one this branch introduced would have cost nothing: 144 remained, and 144
was the floor. Both kinds are counted now, at 145, proved by deleting the
golden include and watching the coverage test fail.

On the JDK: "Java 25 or later" is not true while preview features are in
play, and the reason is worth writing down. javac accepts
--enable-preview only for the release it is running on, so
`--release 25 --enable-preview` is refused outright by a JDK 26 compiler
(verified: "invalid source release 24 with --enable-preview" for the
equivalent case here). And 20 class files in hkj-core, all in vstream,
carry the preview flag in their minor version, which a JVM of a different
major version will not load at all. So the three pages this branch
touches now say the build runs on Java 25, with preview enabled, and that
a later JDK is a deliberate decision rather than a version bump.

That claim appears in the same "or later" form on eight other pages and
in CLAUDE.md. Correcting the project's stated support policy is a
separate decision, so those are left alone here and raised instead.