@@ -20,8 +20,10 @@ plugins {
 }
 ```
 
-The plugin wires `hkj-core`, the annotation processor, `-parameters` and the preview flags. Java 25
-or later is required, with preview features enabled. Hand-rolled Gradle and Maven builds are in
+The plugin wires `hkj-core`, the annotation processor, `-parameters` and the preview flags. The
+build runs on **Java 25**, with preview features enabled: `javac` accepts `--enable-preview` only
+for the release it is running on, so moving to a later JDK is a decision to make deliberately
+rather than a version bump. Hand-rolled Gradle and Maven builds are in
 [Manual setup](../tooling/manual_setup.md), which also covers **Lombok** (list it before
 `hkj-processor`) and [types another processor generates](../tooling/manual_setup.md). For HTTP
 responses, add `hkj-spring-boot-starter`.
